# cpp-shm-ringbuffer-pipeline

./: .gitignore  CMakeLists.txt  README.md
include/: ring_buffer.h
src/: consumer.cpp  producer.cpp  ring_buffer.cpp
